fdo#74271: Added unit test & code changes for footer contains hyperlink.

Problem description:
- If the document contains a hyperlink in footer
  that starts with "www" (ex. www.google.com) then
  the footer1.xml.rels of the roundtrip file contains
  empty Target.
- Since the target is empty, the file get corrupted in MS Office 2007.

Implementation:
- If hyperlink starts with "www" then make bSmart as true.

Change-Id: Ifa2b587d3326152b2d9778bd818fbe68b1cf6410
Reviewed-on: https://gerrit.libreoffice.org/7766
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>